syntax = "proto3";

package roster;

import "google/protobuf/any.proto";

// Roster is a list of participants each having an address and a public key.
message Roster {
    repeated bytes addresses = 1;
    repeated google.protobuf.Any publicKeys = 2;
}

// ChangeSet is the message stored in the inventory for the change set of a
// block.
message ChangeSet {
    uint64 index = 1;
    repeated uint32 remove = 2;
    bytes addr = 3;
    google.protobuf.Any publicKey = 4;
}

// Task is the message for a client task.
message Task {
    repeated uint32 remove = 1;
    bytes addr = 2;
    google.protobuf.Any publicKey = 3;
}
